--- a/pypi/dockerfile_parse-1.2.0-py2.py3-none-any.whl.ABOUT
+++ b/pypi/dockerfile_parse-1.2.0-py2.py3-none-any.whl.ABOUT
@@ -1,31 +1,11 @@
 about_resource: dockerfile_parse-1.2.0-py2.py3-none-any.whl
 checksum_md5: b72d75c6c8b4a42f5f85d44fd91a8abd
 checksum_sha1: 5498b8e6c981c40fd5b08e315f547a13a7ded936
-classifiers:
-  - 'Development Status :: 5 - Production/Stable'
-  - 'Environment :: Other Environment'
-  - 'Intended Audience :: Developers'
-  - 'Operating System :: OS Independent'
-  - 'Programming Language :: Python'
-  - 'Programming Language :: Python :: 2'
-  - 'Programming Language :: Python :: 2.7'
-  - 'Programming Language :: Python :: 3'
-  - 'Programming Language :: Python :: 3.4'
-  - 'Programming Language :: Python :: 3.5'
-  - 'Programming Language :: Python :: 3.6'
-  - 'Programming Language :: Python :: 3.7'
-  - 'Programming Language :: Python :: Implementation :: CPython'
-  - 'Topic :: Software Development :: Libraries :: Python Modules'
 copyright: Copyright (c) Jiri Popelka <jpopelka@redhat.com>
-declared_license:
-  - BSD
-  - 'License :: OSI Approved :: BSD License'
 description: Python library for Dockerfile manipulation
 download_url: https://files.pythonhosted.org/packages/53/83/e9579a25c26bc8e1a6033e46e756e18c25caa05bfc421673d99d1af2efab/dockerfile_parse-1.2.0-py2.py3-none-any.whl
-holder: Jiri Popelka
-holder_contact: jpopelka@redhat.com
 homepage_url: https://github.com/containerbuildsystem/dockerfile-parse
-license_expression: unknown AND bsd-new
+license_expression: bsd-new
 name: dockerfile-parse
 package_url: pkg:pypi/dockerfile-parse@1.2.0
 primary_language: Python
